k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-dep
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: pram25/user  
        ports:
        - containerPort: 8089
        - containerPort: 50051
