k8s/imdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: imdb-service
spec:
  type: NodePort
  ports:
    - port: 4444
      targetPort: 4444
      nodePort: 31516
  selector:
    app: imdb
