k8s/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: NodePort
  ports:
    - port: 8089
      name: http
      targetPort: 8089
      nodePort: 31520
    - port: 50051
      name: grpc
      targetPort: 50051
      nodePort: 31522
  selector:
    app: user
