k8s/zipkin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin-service
spec:
  type: NodePort
  ports:
    - port: 9411
      targetPort: 9411
      nodePort: 31518
  selector:
    app: zipkin
