k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  rules:
  - http:
      paths:
      - path: /user/
        backend:
          serviceName: user-service
          servicePort: 8089
      - path: /imdb/
        backend:
          serviceName: imdb-service
          servicePort: 4444
      - path: /zipkin/
        backend:
          serviceName: zipkin-service
          servicePort: 9411      
      - path: /
        backend:
          serviceName: frontend-service
          servicePort: 3000
